--- a/index.html
+++ b/index.html
@@ -1,164 +1,194 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="bg-white dark:bg-black text-black dark:text-white">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Cid Kageno — PurpleGlass</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cid Kageno — WhiteGlass</title>
 
   <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
 
-  <!-- Optional: Feather icons -->
+  <!-- Feather Icons -->
   <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 
-  <!-- Your custom styles (paste style.css in same folder) -->
+  <!-- Custom styles -->
   <link rel="stylesheet" href="style.css">
 
-  <!-- Small head tweak for smoother font rendering -->
-  <style>html { -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale }</style>
-</head>
-<body class="antialiased bg-[var(--bg)] text-[var(--text)] min-h-screen">
+  <style>
+    html { -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; }
 
-  <!-- NAVBAR (web component loaded from components/navbar.js) -->
+    /* Glass card */
+    .glass-card {
+      background: rgba(255,255,255,0.1);
+      backdrop-filter: blur(15px);
+      border-radius: 1rem;
+      border: 1px solid rgba(255,255,255,0.2);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .glass-card:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 10px 25px rgba(0,0,0,0.1);
+    }
+
+    .profile-pic {
+      width: 6rem;
+      height: 6rem;
+      border-radius: 9999px;
+      border: 2px solid rgba(255,255,255,0.3);
+      object-fit: cover;
+    }
+
+    .tools-scroll::-webkit-scrollbar { display: none; }
+
+    /* Hero blob background */
+    .hero-blob {
+      position: absolute;
+      top: -3rem; left: -3rem;
+      width: 20rem; height: 20rem;
+      background: radial-gradient(circle at center, #ddd, transparent 70%);
+      filter: blur(100px);
+      z-index: -1;
+      animation: blobMove 20s infinite alternate;
+    }
+
+    @keyframes blobMove {
+      0% { transform: translate(0, 0) scale(1); }
+      50% { transform: translate(30px, 20px) scale(1.1); }
+      100% { transform: translate(0, -10px) scale(0.9); }
+    }
+  </style>
+</head>
+<body class="antialiased min-h-screen flex flex-col">
+
+  <!-- NAVBAR -->
   <custom-navbar></custom-navbar>
 
   <!-- MAIN -->
-  <main class="container px-4 py-8">
+  <main class="container mx-auto px-6 py-10 flex-1">
+
     <!-- HERO -->
-    <section class="grid md:grid-cols-2 gap-8 items-center mb-12">
-      <!-- Left: Intro Card -->
-      <div class="lg-card p-8">
-        <div class="flex items-start gap-4">
-          <div class="logo-dot shrink-0">PG</div>
+    <section class="grid md:grid-cols-2 gap-10 items-center mb-16 relative">
+      <!-- Intro Card -->
+      <div class="glass-card p-8 z-10">
+        <div class="flex items-center gap-4 mb-6">
+          <div class="logo-dot shrink-0 text-xl font-bold">PG</div>
           <div>
-            <h1 class="text-3xl font-semibold">Cid <span class="text-[var(--accent-a)]">Kageno</span></h1>
-            <p class="text-sm text-[var(--muted)] mt-1">HSC24 • Developer • AI enthusiast</p>
+            <h1 class="text-4xl font-bold">Cid <span class="text-gray-500 dark:text-gray-300">Kageno</span></h1>
+            <p class="text-sm text-gray-400 mt-1">HSC24 • Developer • AI enthusiast</p>
           </div>
         </div>
-
-        <p class="mt-6 text-sm leading-relaxed text-[var(--muted)] max-w-xl">
+        <p class="text-gray-400 text-sm leading-relaxed max-w-lg">
           I build small apps and bots. I experiment with AI and care about clean UIs, tiny performant code, and shipping things that teach me something.
         </p>
-
         <div class="mt-6 flex flex-wrap gap-3">
-          <a href="contact.html"
-             class="inline-flex items-center gap-2 px-4 py-2 rounded-lg font-medium text-white shadow hover:shadow-lg transition"
-             style="background:linear-gradient(90deg,var(--accent-a),var(--accent-b));">
-            Contact
-          </a>
-
-          <a href="projects.html" class="lg-card inline-flex items-center px-4 py-2 rounded-lg text-sm">
-            Projects
-          </a>
-
-          <button data-toggle-theme class="theme-toggle lg-card px-3 py-2" title="Toggle light/dark">
+          <a href="contact.html" class="px-5 py-2 rounded-lg text-white font-medium" style="background: linear-gradient(90deg,#000,#333);">Contact</a>
+          <a href="projects.html" class="glass-card px-5 py-2 rounded-lg text-sm text-white">Projects</a>
+          <button data-toggle-theme class="glass-card px-3 py-2 rounded-lg" title="Toggle Theme">
             <span id="themeIcon" class="text-sm">⛅</span>
           </button>
         </div>
       </div>
 
-      <!-- Right: Profile Card -->
+      <!-- Profile Card -->
       <div class="relative">
         <div class="hero-blob" aria-hidden="true"></div>
-
-        <div class="lg-card p-8 flex flex-col items-center text-center">
-          <img src="https://i.postimg.cc/g27cvRc7/Profile.jpg" alt="Cid Kageno portrait" class="profile-pic mb-4">
-          <h3 class="font-semibold text-lg">Hello — I’m Cid</h3>
-          <p class="text-sm text-[var(--muted)] mt-2 max-w-[20rem]">Student, tinkerer and web developer learning AI. I enjoy making small tools and learning by building.</p>
-
+        <div class="glass-card p-8 flex flex-col items-center text-center z-10">
+          <img src="https://i.postimg.cc/g27cvRc7/Profile.jpg" alt="Cid Kageno" class="profile-pic mb-4">
+          <h3 class="text-lg font-semibold">Hello — I’m Cid</h3>
+          <p class="text-sm text-gray-400 mt-2 max-w-xs">Student, tinkerer and web developer learning AI. I enjoy making small tools and learning by building.</p>
           <div class="mt-4 flex gap-3">
-            <a href="https://wa.me/8801731371266" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-md text-sm text-[var(--text)] lg-card">
-              Message
-            </a>
-            <a href="https://github.com" target="_blank" class="inline-flex items-center gap-2 px-3 py-2 rounded-md text-sm lg-card">
-              GitHub
-            </a>
+            <a href="https://wa.me/8801731371266" target="_blank" class="glass-card px-4 py-2 rounded-md text-sm">Message</a>
+            <a href="https://github.com" target="_blank" class="glass-card px-4 py-2 rounded-md text-sm">GitHub</a>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- TOOLS (horizontal scroll) -->
-    <section class="mb-12">
-      <h2 class="text-2xl font-semibold mb-4">Tools</h2>
-      <div class="tools-scroll overflow-x-auto flex py-2">
-        <a href="rimini.html" class="tools-card lg-card p-4 mr-4 min-w-[210px] text-center">
-          <img src="https://img.icons8.com/color/96/upscaler.png" class="mx-auto w-20 h-20 mb-3" alt="">
+    <!-- TOOLS -->
+    <section class="mb-16">
+      <h2 class="text-2xl font-semibold mb-6">Tools</h2>
+      <div class="tools-scroll flex gap-6 overflow-x-auto py-2">
+        <a href="rimini.html" class="glass-card p-4 min-w-[200px] text-center">
+          <img src="https://img.icons8.com/color/96/upscaler.png" class="mx-auto w-20 h-20 mb-3">
           <h4 class="font-medium">Rimini</h4>
-          <p class="text-xs text-[var(--muted)] mt-1">Image upscaler</p>
+          <p class="text-xs text-gray-400 mt-1">Image upscaler</p>
         </a>
-
-        <a href="nano-banana.html" class="tools-card lg-card p-4 mr-4 min-w-[210px] text-center">
-          <img src="https://img.icons8.com/color/96/banana.png" class="mx-auto w-20 h-20 mb-3" alt="">
+        <a href="nano-banana.html" class="glass-card p-4 min-w-[200px] text-center">
+          <img src="https://img.icons8.com/color/96/banana.png" class="mx-auto w-20 h-20 mb-3">
           <h4 class="font-medium">Nano Banana</h4>
-          <p class="text-xs text-[var(--muted)] mt-1">Creative edits</p>
+          <p class="text-xs text-gray-400 mt-1">Creative edits</p>
         </a>
-
-        <a href="face-swap.html" class="tools-card lg-card p-4 mr-4 min-w-[210px] text-center">
-          <img src="https://img.icons8.com/color/96/face-id.png" class="mx-auto w-20 h-20 mb-3" alt="">
+        <a href="face-swap.html" class="glass-card p-4 min-w-[200px] text-center">
+          <img src="https://img.icons8.com/color/96/face-id.png" class="mx-auto w-20 h-20 mb-3">
           <h4 class="font-medium">Face Swap</h4>
-          <p class="text-xs text-[var(--muted)] mt-1">AI face tools</p>
+          <p class="text-xs text-gray-400 mt-1">AI face tools</p>
         </a>
       </div>
     </section>
 
     <!-- SKILLS & ABOUT -->
-    <section class="grid md:grid-cols-2 gap-6 mb-12">
-      <div class="lg-card p-6">
-        <h3 class="font-semibold text-lg">Skills</h3>
-        <div class="mt-4 space-y-4">
+    <section class="grid md:grid-cols-2 gap-6 mb-16">
+      <div class="glass-card p-6">
+        <h3 class="text-lg font-semibold mb-4">Skills</h3>
+        <div class="space-y-4">
           <div>
-            <div class="flex justify-between text-sm"><span>JavaScript</span><span class="text-sm">80%</span></div>
-            <div class="skill-track mt-2"><div class="skill-fill bg-gradient-to-r from-[var(--accent-a)] to-[var(--accent-b)]" data-val="80"></div></div>
+            <div class="flex justify-between text-sm"><span>JavaScript</span><span>80%</span></div>
+            <div class="w-full h-2 bg-gray-300 rounded-full mt-1">
+              <div class="h-2 rounded-full bg-gradient-to-r from-gray-700 to-gray-900" style="width:80%"></div>
+            </div>
           </div>
           <div>
-            <div class="flex justify-between text-sm"><span>Python</span><span class="text-sm">70%</span></div>
-            <div class="skill-track mt-2"><div class="skill-fill bg-gradient-to-r from-[var(--accent-a)] to-[var(--accent-b)]" data-val="70"></div></div>
+            <div class="flex justify-between text-sm"><span>Python</span><span>70%</span></div>
+            <div class="w-full h-2 bg-gray-300 rounded-full mt-1">
+              <div class="h-2 rounded-full bg-gradient-to-r from-gray-700 to-gray-900" style="width:70%"></div>
+            </div>
           </div>
           <div>
-            <div class="flex justify-between text-sm"><span>HTML/CSS</span><span class="text-sm">85%</span></div>
-            <div class="skill-track mt-2"><div class="skill-fill bg-gradient-to-r from-[var(--accent-a)] to-[var(--accent-b)]" data-val="85"></div></div>
+            <div class="flex justify-between text-sm"><span>HTML/CSS</span><span>85%</span></div>
+            <div class="w-full h-2 bg-gray-300 rounded-full mt-1">
+              <div class="h-2 rounded-full bg-gradient-to-r from-gray-700 to-gray-900" style="width:85%"></div>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="lg-card p-6">
-        <h3 class="font-semibold text-lg">About</h3>
-        <p class="mt-3 text-sm text-[var(--muted)]">Student focused on web development and AI. I enjoy building small tools and learning to ship faster.</p>
-
+      <div class="glass-card p-6">
+        <h3 class="text-lg font-semibold mb-3">About</h3>
+        <p class="text-sm text-gray-400">Student focused on web development and AI. I enjoy building small tools and learning to ship faster.</p>
         <div class="mt-4 grid grid-cols-2 gap-3">
-          <div class="lg-card p-3 text-center">
+          <div class="glass-card p-3 text-center">
             <div class="font-semibold">Location</div>
-            <div class="text-sm text-[var(--muted)]">Bhanga, Faridpur</div>
+            <div class="text-sm text-gray-400">Bhanga, Faridpur</div>
           </div>
-          <div class="lg-card p-3 text-center">
+          <div class="glass-card p-3 text-center">
             <div class="font-semibold">Education</div>
-            <div class="text-sm text-[var(--muted)]">HSC24 — Government Rajendra College</div>
+            <div class="text-sm text-gray-400">HSC24 — Government Rajendra College</div>
           </div>
         </div>
       </div>
     </section>
 
-    <!-- FOOTER (web component) -->
+    <!-- FOOTER -->
     <custom-footer></custom-footer>
+
   </main>
 
   <!-- CHAT PILL -->
-  <a href="chat.html" class="chat-pill" aria-label="Open chat">
+  <a href="chat.html" class="fixed bottom-6 right-6 bg-black dark:bg-white text-white dark:text-black rounded-full p-3 flex items-center gap-2 shadow-lg hover:scale-105 transition-transform">
     <span class="hidden sm:inline">Chat</span>
-    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.4" d="M8 10h.01M12 10h.01M16 10h.01M21 12c0 4.418-4.03 8-9 8-1.273 0-2.466-.21-3.557-.588L3 20l1.588-3.444C3.51 15.222 3 13.65 3 12 3 7.582 7.03 4 12 4s9 3.582 9 8z"/>
     </svg>
   </a>
 
-  <!-- components -->
+  <!-- Components -->
   <script src="components/navbar.js"></script>
   <script src="components/footer.js"></script>
 
-  <!-- behavior -->
+  <!-- Behavior -->
   <script src="script.js"></script>
-
-  <!-- enable feather icons if present -->
-  <script>document.addEventListener('DOMContentLoaded', ()=>{ if(window.feather) feather.replace() })</script>
+  <script>
+    document.addEventListener('DOMContentLoaded', ()=>{ if(window.feather) feather.replace() })
+  </script>
 </body>
 </html>
